# douyin-LiveRec-king

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  build_windows.bat  main.py  pyproject.toml  requirements.txt  run_windows.bat  启动程序.bat
.github/workflows/: tests.yml
config/: config.example.ini
scripts/: check_utf8.py
src/douyin_live_rec_king/: __init__.py  app.py  config.py  history.py  logging_setup.py  models.py
src/douyin_live_rec_king/gui/: about_page.py  dialogs.py  log_bridge.py  main_window.py  page_bundle.py  recordings_page.py  settings_page.py  statistics_page.py  tasks_page.py
src/douyin_live_rec_king/recording/: __init__.py  events.py  ffmpeg.py  recorder.py
src/douyin_live_rec_king/services/: __init__.py  application.py  file_integrity.py  media_probe.py  monitor.py  persistence.py  recording_history.py  recording_service.py  retry.py  statistics.py  storage_guard.py  task_manager.py  task_runtime_coordinator.py
src/douyin_live_rec_king/utils/: __init__.py  filenames.py  json_recovery.py  paths.py
tests/: test_application_services.py  test_bilibili.py  test_dialogs.py  test_douyin_extractor.py  test_fast_stress.py  test_ffmpeg.py  test_ffmpeg_integration.py  test_file_integrity.py  test_filenames.py  test_final_services.py  test_history.py  test_models_config.py  test_monitor.py  test_persistence.py  test_recorder.py  test_recording_service.py  test_recordings_page.py  test_retry.py  test_shutdown_ui.py  test_storage_guard.py  test_task_manager.py
